--- a/index.html
+++ b/index.html
@@ -116,7 +116,7 @@
         <h6 class="head6">WELCOME TO</h6>
     <H1 class="head1">IT WORLD</H1>
     <h4 class="head4"><span class="s1">Web Design,</span><span class="s2"> Development</span>
-         &<span class="s3">branding</span></h4>
+         &<span class="s3">brandings</span></h4>
          <button class="but">GET STARTED</button>
     </div>
     
